# arquitectura-avanzada

./: .cursorignore  .env.example  .envrc.example  .gitignore  .gitignore_analisis  .gitleaks.toml  .trivyignore  ANALISIS_COMPLETO.md  ANALISIS_FINAL_CUMPLIMIENTO.md  ANALISIS_IMPLEMENTACION_VS_REFERENCIA.md  ANALISIS_START_HERE.md  ARQUITECTURA_PRODUCCION.md  AZURE_DEPLOYMENT_SUCCESS.md  AZURE_QUICKSTART.md  CHANGELOG.md  COMPARATIVA_VISUAL.md  CONFIGURACION_MANUAL_COMPLETA.md  CUMPLIMIENTO_REQUERIMIENTOS.md  DEPLOYMENT.md  DESARROLLO_LOCAL_MANUAL.md  ESTADO_ACTUAL_IMPLEMENTACION.md  GITHUB_ACTIONS_SETUP.md  GUIA_COMPLETA.md  IMPLEMENTATION_SUMMARY.md  INDICE_MAESTRO.md  LEEME_PRIMERO.md  LOCAL_DEVELOPMENT.md  MIGRATION_GUIDE.md  Makefile  Operador_Carpeta_Ciudadana_Azure.md  PLAN_ACCION_REQUERIMIENTOS.md  PROGRESO_IMPLEMENTACION.md  README.md  README_ANALISIS.md  REQUERIMIENTOS_RESUMEN_EJECUTIVO.md  RESUMEN_COMPLETO.md  RESUMEN_COMPLETO_SESION.md  RESUMEN_EJECUTIVO_FASE12_13.md  RESUMEN_FASE1.md  RESUMEN_FASE2.md  (+21 more)
services/auth/: Dockerfile  README.md  alembic.ini  create_mintic_user.py  create_mintic_user_simple.py  create_tables.py  execute_mintic_user_sql.py  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 2703289615c3_create_auth_tables.py
services/auth/app/: __init__.py  config.py  database.py  main.py  models.py
services/auth/app/routers/: __init__.py  auth.py  oidc.py  sessions.py
services/auth/app/services/: auth_service.py  azure_service.py  jwt_service.py  key_manager.py
services/auth/tests/: __init__.py  conftest.py  test_auth_endpoints.py
services/citizen/: Dockerfile  README.md  alembic.ini  azure.env.example  create_mintic_user.py  pyproject.toml
services/citizen/alembic/: env.py
services/citizen/alembic/versions/: 002_create_users_table.py  003_create_audit_events_table.py
services/citizen/app/: config.py  database.py  main.py  models.py  models_users.py  schemas.py
services/citizen/app/middleware/: auth.py
services/citizen/app/routers/: audit.py  citizens.py  users.py
services/citizen/tests/: __init__.py  test_citizen_endpoints.py  test_routers.py
services/common/: pyproject.toml
services/common/carpeta_common/: __init__.py  advanced_rate_limiter.py  audit_logger.py  bus.py  circuit_breaker.py  db_utils.py  health.py  health_example.py  http_client.py  jwt_auth.py  m2m_auth.py  message_broker.py  middleware.py  observability.py  redis_client.py  redis_lock.py  security_headers.py  service_bus_consumer.py
services/common/carpeta_common/tests/: test_advanced_rate_limiter.py  test_audit_logger.py  test_circuit_breaker.py  test_m2m_auth.py  test_redis_lock.py  test_security_headers.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: config.py  main.py  middleware.py  proxy.py  rate_limiter.py  sanitizer.py
services/gateway/tests/: test_gateway.py  test_rate_limiter.py
services/ingestion/: .env.example  Dockerfile  README.md  azure.env.example  pyproject.toml  test_pod_db_connection.py
services/ingestion/alembic/: env.py
services/ingestion/alembic/versions/: 001_add_worm_retention_fields.py
services/ingestion/app/: azure_storage.py  config.py  database.py  hash_verification.py  main.py  models.py  s3_client.py  schemas.py  service_bus.py
services/ingestion/app/routers/: documents.py
services/ingestion/tests/: __init__.py  test_document_upload.py
services/metadata/: Dockerfile  README.md  pyproject.toml
services/metadata/app/: __init__.py  config.py  database.py  main.py  models.py  opensearch_client.py  schemas.py
services/metadata/app/consumers/: document_indexer.py  event_consumer.py
services/metadata/app/routers/: metadata.py
services/metadata/tests/: conftest.py  test_metadata_service.py
services/mintic_client/: Dockerfile  README.md  pyproject.toml  test_azure_connections.py
services/mintic_client/app/: __init__.py  client.py  client_with_circuit_breaker.py  config.py  database.py  database_models.py  hub_rate_limiter.py  main.py  models.py  redis_client.py  sanitizer.py  telemetry.py
services/mintic_client/app/routers/: mintic.py  status.py
services/mintic_client/app/services/: __init__.py  operator_service.py
services/mintic_client/tests/: conftest.py  test_implementations.py  test_mintic.py
services/mintic_client/tests/unit/: test_client.py  test_client_responses.py  test_get_operators.py  test_idempotency.py
services/notification/: .env.example  Dockerfile  pyproject.toml
services/notification/app/: config.py  main.py  models.py
services/notification/app/consumers/: notification_consumer.py
services/notification/app/routers/: notifications.py
services/notification/app/services/: notifier.py
services/notification/app/templates/: document_authenticated.html  transfer_confirmed.html
services/read_models/: Dockerfile  README.md  pyproject.toml
services/read_models/app/: __init__.py  config.py  database.py  main.py  models.py
services/read_models/tests/: test_placeholder.py
services/shared/: pyproject.toml
services/shared/carpeta_shared/: __init__.py  aws_clients.py  azure_clients.py  config.py  models.py  observability.py
services/sharing/: .dockerignore  Dockerfile  pyproject.toml
services/sharing/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
services/sharing/tests/: conftest.py  test_sharing.py  test_sharing_service.py
services/signature/: Dockerfile  README.md  azure.env.example  pyproject.toml
services/signature/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
services/signature/tests/: conftest.py  test_signature_service.py
services/transfer/: Dockerfile  README.md  azure.env.example  pyproject.toml
services/transfer/app/: azure_redis.py  azure_servicebus.py  azure_storage.py  base.py  config.py  database.py  db_models.py  main.py  models.py  saga.py  services_with_locks.py
services/transfer/tests/: conftest.py  test_transfer_service.py
services/transfer_worker/: Dockerfile  README.md  pyproject.toml
services/transfer_worker/app/: main.py
(+420 files in other folders)
