[tool.poetry]
name = "auth-service"
version = "1.0.0"
description = "Authentication and authorization service with OIDC support"
authors = []

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["email"], version = "^2.12.3"}
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
cryptography = "^41.0.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.30.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
alembic = "^1.13.0"
httpx = "^0.26.0,<0.29.0"
# Azure dependencies (only for Azure AD B2C)
azure-identity = "^1.15.0"
# Common package (local)
carpeta-common = {path = "../common", develop = true, optional = true}

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.11"

[tool.poetry.extras]
common = ["carpeta-common"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
