[tool.poetry]
name = "carpeta-common"
version = "0.1.0"
description = "Shared utilities for Carpeta Ciudadana microservices"
authors = []
packages = [{include = "carpeta_common"}]

[tool.poetry.dependencies]
python = "^3.13"
redis = {extras = ["hiredis"], version = "^5.0.1"}
azure-servicebus = {version = "^7.11.0", optional = true}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.30.0"
fastapi = "^0.109.0"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
cryptography = "^41.0.0"
httpx = "^0.26.0"
# OpenTelemetry
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-httpx = "^0.42b0"
opentelemetry-instrumentation-redis = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.21.0"
azure-monitor-opentelemetry-exporter = {version = "^1.0.0b21", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
fakeredis = "^2.20.0"

[tool.poetry.extras]
servicebus = ["azure-servicebus"]
azuremonitor = ["azure-monitor-opentelemetry-exporter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
