[tool.poetry]
name = "metadata-service"
version = "0.1.0"
description = "Metadata and search service"
authors = ["Carpeta Ciudadana Team"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.30.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
opensearch-py = "^2.4.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
carpeta-common = {path = "../common", develop = true}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0,<0.29.0"
# Additional dependencies for Azure services
azure-servicebus = "^7.11.0"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
# Dependencies for async operations
aiofiles = "^23.2.1"
# Dependencies for JSON and hashing (built-in but explicit)
# hashlib, json, logging, datetime, typing, asyncio, contextlib are built-in

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

