[tool.poetry]
name = "mintic-client"
version = "0.1.0"
description = "MinTIC Hub client service"
authors = ["Carpeta Ciudadana Team"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0,<0.29.0"
pydantic = "^2.12.3"
pydantic-settings = "^2.6.0"
python-jose = "^3.3.0"
cryptography = "^41.0.7"
tenacity = "^8.2.3"
redis = {extras = ["hiredis"], version = "^5.0.1"}
psycopg = {extras = ["binary"], version = "^3.1.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
carpeta-common = {path = "../common", develop = true}

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-httpx = "^0.28.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

