[tool.poetry]
name = "read-models-service"
version = "0.1.0"
description = "CQRS Read Models service with event projections"
authors = []

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.30.0"
azure-servicebus = "^7.11.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
carpeta-common = {path = "../common", develop = true}

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-httpx = "^0.29.0"
fakeredis = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

